# src

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  README.md  buildAll.sh  buildExtLibs.sh  buildPm.sh  cleanAll.sh  cleanExtLibs.sh  cleanPm.sh  common.sh  continueBuild.sh  dummyInstall.sh  pm.desk_top  testAll.sh
LICENCE/: ADDITIONAL_LICENCE_TERMS
UpdaterTest/: CMakeLists.txt  README.mdown  appcast_beta2.xml  appcast_beta_2.xml  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  test.xml
UpdaterTest/sample/: Sample.sln  Sample.vcproj
UpdaterTest/samplePM/: appcast_base-disk.xml
UpdaterTest/samplePM/downloads/: pmApi_0_base0_0.vmdk  pmApi_0_base0_0.vmdk.signature  pmApi_0_base0_1.vmdk  pmApi_0_base0_1.vmdk.signature  pmApi_0_base0_2.vmdk  pmApi_0_base0_2.vmdk.signature  pmApi_0_base0_3.vmdk  pmApi_0_base0_3.vmdk.signature  pmApi_0_base0_4.vmdk  pmApi_0_base0_4.vmdk.signature  pmApi_0_base1_0.vmdk  pmApi_0_base1_0.vmdk.signature  pmApi_0_base1_1.vmdk  pmApi_0_base1_1.vmdk.signature  pmApi_0_base1_2.vmdk  pmApi_0_base1_2.vmdk.signature  pmApi_0_base1_3.vmdk  pmApi_0_base1_3.vmdk.signature  pmApi_0_base1_4.vmdk  pmApi_0_base1_4.vmdk.signature  pmApi_0_delta0_0-0_1  pmApi_0_delta0_1-0_2  pmApi_0_delta0_2-0_3  pmApi_0_delta0_2-0_4  pmApi_0_delta0_4-1_0  pmApi_0_delta1_0-1_1  pmApi_0_delta1_0-1_4  pmApi_0_delta1_1-1_2  pmApi_0_delta1_1-1_3
artwork/: LICENSE  installer_banner.xcf  installer_welcome_and_completion.xcf
cmake_modules/: FindLibRsync.cmake  FindLibSodium.cmake  FindQuaZip.cmake  FindRemoteDisplay.cmake  PmCommon.cmake
concept_and_notes/: Architecture.odp  AutomatedTests.md  BaseDiskCreation.md  CodingStyleGuideline.md  Deployment.md  PGPConcept.md  ReleaseNotes_DE.md  TechnicalConcept_de.odt  TechnicalConcept_en.odt  TestKonzept.md  UpdateKonzept.md
ext_libs/: CMakeLists.txt  FreeRDP_changes_mingw.diff  checkoutExternal.sh  deleteExternal.sh  savePatchesOfRemoteDisplay.sh
ext_libs/CLI11/: Source
ext_libs/librsync/: CMakeLists.txt
ext_libs/librsync/src/: trace.c
ext_libs/quazip/: CMakeLists.txt
ext_libs/quazip/quazip/: CMakeLists.txt
ext_libs/zlib/: CMakeLists.txt
install_windows/: CustomStrings.wxl  pm.XMLPatches.xml  pm.template.in
install_windows/manual_packaging/: buildMsiSetup.sh  cpack_variables.wxi  directories.wxs  features.wxs  files.wxs  main.wxs  product_fragment.wxi  properties.wxi
libpm/: CMakeLists.txt  CheckUpdate.cpp  CheckUpdate.h  ComponentVersion.h  CpuFeatures.h  CpuFeaturesLinux.cpp  CpuFeaturesWindows.cpp  PMCommand.cpp  PMCommand.h  PMCommandExec.cpp  PMCommandExec.h  PMInstance.cpp  PMInstance.h  PMInstanceConfiguration.cpp  PMInstanceConfiguration.h  PMManager.cpp  PMManager.h  PmCommand.cpp  PmCommand.h  PmCommandExec.cpp  PmCommandExec.h  PmData.cpp  PmData.h  PmLog.cpp  PmLog.h  PmManager.cpp  PmManager.h  PmVersion.cpp  PmVersion.h  PmVpnHelper.cpp  PmVpnHelper.h  SystemConfig.cpp  SystemConfig.h  UpdateManager.cpp  UpdateManager.h  UserConfig.cpp  UserConfig.h  VerifiedDownload.cpp  VerifiedDownload.h  VmInfoIpAddress.cpp  (+67 more)
libpm/translations/: lang_de.ts
packaging/: SetupNotes-VM.txt  copyScriptsFromVM.bat  copyScriptsFromVM.sh  copyScriptsToVM.bat  copyScriptsToVM.sh
packaging/BaseDisk/: README.md  buildNewBaseDisk.py  cleanup.py  generateInitialConfig.py  libBaseDiskBuild.py  libVM.py  template-description.vmdk
packaging/BaseDisk/pm_files/etc/: resolv.conf
packaging/BaseDisk/pm_files/pm/: download_tor_browser.sh
packaging/build_base-disk/: README  README.md  VM_lib.py  base-disk-build.xml_grml  base-disk-build.xml_guestadditions  build_BaseDisk.py  build_base-disk.py  prepare_BaseDisk_update.config.json  prepare_BaseDisk_update.py
packaging/build_base-disk/pm_files/etc/: sysctl.conf
packaging/build_base-disk/pm_files/pm/: download_tor_browser.sh
packaging/firefox/: DEV.md  README.md  prefs.js.0  prefs.js.1  prefs.js.2  prefs.js.3  prefs.js.4  prefs.js.5  prefs.js.6  xulstore.json
packaging/firefox/testprofile/: extensions.json  prefs.js
pm/: CMakeLists.txt  PMCommand.cpp  PMCommand.h  PMInstance.cpp  PMInstance.h  PMInstanceConfiguration.cpp  PMInstanceConfiguration.h  PMManager.cpp  PMManager.h  SystemConfig.cpp  SystemConfig.h  UserConfig.cpp  UserConfig.h  WidgetCommandExec.cpp  WidgetCommandExec.h  WidgetNewTab.cpp  WidgetNewTab.h  WidgetRdpView.cpp  WidgetRdpView.h  WidgetUpdate.cpp  WidgetUpdate.h  WindowMain.cpp  WindowMain.h  WindowMain.ui  getMemorySize.cpp  getMemorySize.h  images.qrc  main.cpp  resource.h  resources.rc  utils.cpp  utils.h
pm/images/: PrivacyMachine_Logo_AllIcons.xcf
pm/translations/: lang_de.ts
problem_reporter/: CMakeLists.txt  frmProblemReporter.cpp  frmProblemReporter.h  frmProblemReporter.ui  images.qrc  main.cpp  resources.rc
source/: CMakeLists.txt  PMCommand.cpp  PMCommand.h  PMInstance.cpp  PMInstance.h  PMInstanceConfiguration.cpp  PMInstanceConfiguration.h  PMManager.cpp  PMManager.h  SystemConfig.cpp  SystemConfig.h  UserConfig.cpp  UserConfig.h  WidgetCommandExec.cpp  WidgetCommandExec.h  WidgetCommandExec.ui  WidgetNewTab.cpp  WidgetNewTab.h  WidgetNewTab.ui  WidgetUpdate.cpp  WidgetUpdate.h  WidgetUpdate.ui  WindowMain.cpp  WindowMain.h  WindowMain.ui  images.qrc  main.cpp  resource.h  resources.rc  utils.cpp  utils.h
source/rdp/: WidgetRdpView.cpp  WidgetRdpView.h
source/translations/: lang_de.ts  lang_en.ts
tests/: CMakeLists.txt  TestGui.cpp  TestPatching.cpp  TestPatching.h  TestUserConfigOpenVPN.cpp  TestXmlUpdateParser.cpp  TestXmlUpdateParser.h
tests/TestPatching/: appcast_base-disk_0.xml  appcast_base-disk_1.xml  appcast_base-disk_2.xml  appcast_base-disk_3.xml  appcast_base-disk_4.xml  appcast_base-disk_5.xml  appcast_base-disk_6.xml  appcast_base-disk_7.xml  appcast_base-disk_8.xml  appcast_base-disk_9.xml  releaseNotes_base-disk.html
tests/TestPatching/downloads/: base-disk_1.7z
uac_deploy/: CMakeLists.txt  main.cpp  resource.h  resources.rc
working_dir/: UserGuide_de.odt  UserGuide_en.odt  startPmOnLiveStick.sh
working_dir/conf/: PrivacyMachine_Example_de.ini  PrivacyMachine_Example_en.ini
(+49 files in other folders)
