MESSAGE("Configuring ext_lib...")

set (WITH_CLIENT ON)
set (WITH_SERVER OFF)
set (CHANNEL_CLIPRDR ON)
set (CHANNEL_RDPDR OFF)
set (CHANNEL_SMARTCARD OFF)
set (CHANNEL_REMDESK OFF)
set (CHANNEL_RDPSND OFF)
set (CHANNEL_RDPGFX OFF) 
set (CHANNEL_DRDYNVC OFF)
set (CHANNEL_DRIVE OFF)
set (CHANNEL_PRINTER OFF)
set (WITH_XTEST ON CACHE BOOL "turned on in all subdirs")
set (WITH_WAYLAND OFF CACHE BOOL "turned off in all subdirs")
set (BUILD_WITH_JPEG ON CACHE BOOL "turned on in all subdirs")
set (WITH_QTSOUND OFF CACHE BOOL "turned off in all subdirs")
set (WITH_SSE2 OFF)
set (WITH_SSE2_TARGET OFF)
# enable massive debug log (needed for clipboard-development)
set (WITH_DEBUG_CLIPRDR ON)

# disabled feature: use libsystemd for systemd journal appender (allows to export wLog to systemd journal)
set (WITH_LIBSYSTEMD OFF)

set (WITH_OPENSSL ON)
if (MSVC)
  set (OPENSSL_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/OpenSSL/openssl-1.0.2d-64bit-${CMAKE_BUILD_TYPE}-DLL-VS2013)
endif()

MESSAGE("Configuring FreeRDP...")
add_subdirectory(FreeRDP)

MESSAGE("Configuring RemoteDisplay...")

# We want that the FindFreeRDP function finds the current source, not the installes binaries 
if(NOT DEFINED FREERDP_ROOT_DIR)
  set (FREERDP_ROOT_DIR "${CMAKE_CURRENT_LIST_DIR}/FreeRDP")
endif()
if(NOT DEFINED FREERDP_INCLUDE_DIR)
  set (FREERDP_INCLUDE_DIR "${CMAKE_CURRENT_LIST_DIR}/FreeRDP/include")
endif()
if(NOT DEFINED FREERDP_LIBRARIES)
  set (FREERDP_LIBRARIES freerdp freerdp-client)
endif()
add_subdirectory(RemoteDisplay)
