MESSAGE("Configuring ext_lib...")

if (NOT SKIP_FREERDP_CODE)
  set (WITH_CLIENT ON)
  set (WITH_SERVER OFF)
  set (CHANNEL_CLIPRDR ON)
  set (CHANNEL_RDPDR OFF)
  set (CHANNEL_SMARTCARD OFF)
  set (CHANNEL_REMDESK OFF)
  set (CHANNEL_RDPSND OFF)
  set (CHANNEL_RDPGFX OFF) 
  set (CHANNEL_DRDYNVC OFF)
  set (CHANNEL_DRIVE OFF)
  set (CHANNEL_PRINTER OFF)
  set (WITH_XTEST ON CACHE BOOL "turned on in all subdirs")
  set (WITH_WAYLAND OFF CACHE BOOL "turned off in all subdirs")
  set (WITH_DIRECTFB OFF)
  if(NOT MSVC)
    # needed for sending keystrokes under linux
    set (WITH_X11 ON) 
    set (WITH_XKBFILE OFF)
  endif()
  set (BUILD_WITH_JPEG ON CACHE BOOL "turned on in all subdirs")
  set (WITH_QTSOUND OFF CACHE BOOL "turned off in all subdirs")
  set (WITH_SSE2 ON)
  #set (WITH_SSE2_TARGET OFF)
  set (WITH_GSTREAMER_1_0 OFF)
  set (WITH_FFMPEG OFF)
  set (WITH_OSS OFF)
  set (WITH_ALSA OFF)
  # enable massive debug log (needed for clipboard-development)
  set (WITH_DEBUG_CLIPRDR ON)
  
  # disabled feature: use libsystemd for systemd journal appender (allows to export wLog to systemd journal)
  set (WITH_LIBSYSTEMD OFF)

  set (WITH_MBEDTLS OFF) # does not work as drop-in-replacement for openssl
  set (WITH_OPENSSL ON)
  
  MESSAGE("Configuring FreeRDP...")
  set (FREERDP_SKIP_WINPR_TOOLS ON)
  set (FREERDP_CUSTOM_INSTALL ON)
  if (MSVC)
    set (CMAKE_INSTALL_LIBDIR .)
    set (WINPR_CMAKE_INSTALL_DIR .)
    set (FREERDP_CLIENT_CMAKE_INSTALL_DIR .)
    set (FREERDP_CMAKE_INSTALL_DIR .)
  else()
    set (CMAKE_INSTALL_LIBDIR privacymachine/)
    set (WINPR_CMAKE_INSTALL_DIR privacymachine/lib)
    set (FREERDP_CLIENT_CMAKE_INSTALL_DIR privacymachine/lib)
    set (FREERDP_CMAKE_INSTALL_DIR privacymachine/)
  endif()
  add_subdirectory(FreeRDP)

  MESSAGE("Configuring RemoteDisplay...")

  # We want that the FindFreeRDP function finds the current source, not the installed binaries 
  if(NOT DEFINED FREERDP_ROOT_DIR)
    set (FREERDP_ROOT_DIR "${CMAKE_CURRENT_LIST_DIR}/FreeRDP")
  endif()
  if(NOT DEFINED FREERDP_INCLUDE_DIR)
    set (FREERDP_INCLUDE_DIR "${CMAKE_CURRENT_LIST_DIR}/FreeRDP/include")
  endif()
  if(NOT DEFINED FREERDP_LIBRARIES)
    set (FREERDP_LIBRARIES freerdp freerdp-client)
  endif()
  set (REMOTEDISPLAY_SKIP_INSTALL_HEADER ON)
  set (REMOTEDISPLAY_SKIP_INSTALL_CLIENT ON)
  set (REMOTEDISPLAY_INSTALL_PREFIX privacymachine/)
  add_subdirectory(RemoteDisplay)
endif()

if (MSVC)
  set (SKIP_INSTALL_ALL ON)
  add_subdirectory(zlib)
endif()

if (MSVC)
  set (LIBRSYNC_INSTALL_DIR .)
else()
  set (LIBRSYNC_INSTALL_DIR privacymachine/lib)
endif()
add_subdirectory(librsync)

set (QUAZIP_SKIP_INSTALL ON)
add_subdirectory(quazip)
